--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,14 +2,16 @@ name: Build and Notarize macOS App
 
 on:
   push:
-    branches: [ main, master ]
-  pull_request:
-    branches: [ main, master ]
+    tags:
+      - 'v*' # Trigger on version tags like v1.0.0
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
-    runs-on: macos-13  # macOS Ventura - no provenance tracking issue
+    runs-on: macos-13
     
     steps:
     - name: Checkout code
@@ -30,18 +32,13 @@ jobs:
         CERTIFICATE_PASSWORD: ${{ secrets.MACOS_CERTIFICATE_PASSWORD }}
         KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
       run: |
-        # Create temporary keychain
         KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
         security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
         security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
         security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-        
-        # Import certificate to keychain
         CERTIFICATE_PATH=$RUNNER_TEMP/certificate.p12
         echo -n "$CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
         security import $CERTIFICATE_PATH -P "$CERTIFICATE_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-        
-        # Enable codesigning from this keychain
         security list-keychain -d user -s $KEYCHAIN_PATH
         security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
     
@@ -50,17 +47,15 @@ jobs:
         APPLE_ID: ${{ secrets.APPLE_ID }}
         APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
       run: npm run build
-    
-    - name: Upload DMG
-      uses: actions/upload-artifact@v4
+      
+    - name: Release
+      uses: softprops/action-gh-release@v1
+      if: startsWith(github.ref, 'refs/tags/')
       with:
-        name: Sound-Meter-macOS
-        path: dist/*.dmg
-        retention-days: 90
-    
-    - name: Upload ZIP
-      uses: actions/upload-artifact@v4
-      with:
-        name: Sound-Meter-macOS-zip
-        path: dist/*.zip
-        retention-days: 90
+        files: |
+          dist/*.dmg
+          dist/*.zip
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
