Moving team ID to secret

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
       env:
         APPLE_ID: ${{ secrets.APPLE_ID }}
         APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
-        APPLE_TEAM_ID: 3LVTT3LVDN
+        APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
       run: npm run build
       
     - name: Release
