--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sound_meter",
-d  "version": "1.0.4",
+  "version": "1.0.4",
   "description": "",
   "main": "main.js",
   "scripts": {
