--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-builder"
+    "build": "electron-builder",
+    "test": "jest"
   },
   "build": {
-    "publish": null,
+    "publish": {
+      "provider": "github",
+      "releaseType": "release"
+    },
     "appId": "com.benjscohen.soundmeter",
     "productName": "Sound Meter",
     "mac": {
@@ -54,9 +58,11 @@
     "@electron/notarize": "^3.1.1",
     "dotenv": "^17.2.3",
     "electron": "^39.2.3",
-    "electron-builder": "^26.0.12"
+    "electron-builder": "^26.0.12",
+    "jest": "^29.7.0"
   },
   "dependencies": {
-    "electron-updater": "^6.6.2"
+    "electron-log": "^5.1.0",
+    "electron-updater": "^6.1.8"
   }
 }
