--- a/landing_page/package.json
+++ b/landing_page/package.json
@@ -10,5 +10,8 @@
     },
     "devDependencies": {
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "@vercel/analytics": "^1.5.0"
     }
 }
